Fixed the vertical alignment of the `.navbar` components

--- a/src/ui/components/navbar.css
+++ b/src/ui/components/navbar.css
@@ -14,6 +14,11 @@
 	.navbar { display: none; }
 }
 
+.navbar-brand {
+	align-items: center;
+	display: flex;
+}
+
 .navbar-brand img {
 	position: relative;
 	top: -1px;
